Added header and a small greeting message.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Pixell River Employee Directory</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1>Pixell River Employee Directory</h1>
+            <p>Welcome! Here you can see Zach's awesome employees by departments.</p>
+        </div>
+    </header>
 </body>
 </html>
