Made a logo and added alt text on it, utilized a different directory for a placement of the logo. Made a div class and added a class to it in preparation.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Pixell River Employee Directory</h1>
-            <p>Welcome! Here you can see Zach's awesome employees by departments.</p>
+        <div class="header-content">
+            <img
+                src="./images/logo.svg"
+                alt="Pixell RiveR Financial Logo"
+                class="logo"
+            />
+            <div>
+                <h1>Pixell River Employee Directory</h1>
+                <p>Welcome! Here you can see Zach's awesome employees by departments.</p>
+            </div>
         </div>
     </header>
 </body>
