Added main and sections for employees and departments in prepartion of JavaScript.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <!-- Section for Employees/Departments (gets gets populated by JavaScript) -->
+        <section class="employees">
+
+        </section>
+        <section class="departments">
+
+        </section>
+    </main>
 </body>
 </html>
