--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
 
         </section>
     </main>
+    <footer>
+        <p>&copy; Copyright Pixell River Financial <span id="year"></span></p>
+    </footer>
 </body>
 </html>
