--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
     <footer>
         <p>&copy; Copyright Pixell River Financial <span id="year"></span></p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
