Added employee names and department values found in Case Study Document pg. 17-18, and used AI to structure them in a way that utilizes the interface shown in instructions. Also tweaked main element in HTML file.

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
     </header>
 
     <main>
-        <!-- Section for Employees/Departments (gets gets populated by JavaScript) -->
-        <section class="employees">
-
-        </section>
-        <section class="departments">
-
+        <section>
+            <div id="directory-container">
+                <!-- the Employee directoryy will be loaded here -->
+            </div>
         </section>
     </main>
     <footer>
