--- a/Module-1-lab-2/index.html
+++ b/Module-1-lab-2/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>module-1-lab-2</title>
+    <title>Pixell River Employee Directory</title>
   </head>
   <body>
+    <!-- React root -->
     <div id="root"></div>
+
+    <!-- Vite entry point -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
